# Operating_Systems

./: .gitignore  server
Wet1/: CMakeLists.txt  Commands.cpp  Commands.h  Makefile  jb  main.cpp  mypid  signals.cpp  signals.h  smash  smash.cpp  temp.txt  test.py
Wet1/tests_tal/built_ins/: bg_errors.mem  cd.mem  chprompt.mem  fg.mem  fg_errors.mem  jobs.mem  kill_errors.mem  pwd.mem  quit_kill1.mem  quit_kill2.mem  quit_kill3.mem  quit_kill4.mem  quit_nojobs1.mem  quit_nojobs2.mem  showpid.mem
Wet1/unit/: cat.exp  cat.in  cd.mem  chprompt.mem  cp.in  cp.mem  jobs.mem  kill.exp  kill.mem  pipe.exp  pipe.in  pipe.mem  quit.mem  redirect.exp  redirect.in  redirect.mem  showpid.mem  timeout.exp  timeout.in  timeout.mem
Wet3/: CMakeLists.txt  Makefile  client  client.c  output.c  queue.c  queue.h  request.c  request.h  segel.c  server.c  server2  server_tests.py  temp
Wet3/public/: output10.cgi  output5.cgi
Wet3/tests/: client  client_test1.in  client_test10.in  client_test11.in  client_test12.in  client_test2.in  client_test3.in  client_test4.in  client_test5.in  client_test6.in  client_test7.in  client_test8.in  client_test9.in  server  server2  server_test1.in  server_test10.in  server_test11.in  server_test12.in  server_test2.in  server_test3.in  server_test4.in  server_test5.in  server_test6.in  server_test7.in  server_test8.in  server_test9.in  ult_compare.sh
Wet3/tests/public/: output.cgi  output10.cgi  output20.cgi  output5.cgi
Wet3/yael/: client  output.cgi  queue.c  queue.h  request.c  request.h  run_multiple_req.sh  server  server.c
Wet4/: CMakeLists.txt  malloc_1.cpp  malloc_2.cpp  malloc_3.cpp  malloc_4.cpp  os_malloc.h  submitters.txt  temp  temp.txt
Wet4/adjusted_tests/adjusted_tests/: malloc_3_tests.cpp  malloc_3_tests_realloc.cpp  tamuz_tests_hw4_malloc2.cpp  tamuz_tests_hw4_malloc4.cpp  test_realloc.cpp  test_whatsup.cpp
Wet4/adjusted_tests/adjusted_tests/testsV2/: mainTest2.cpp
Wet4/adjusted_tests_hw4/: mainTest2.cpp  mainTest3.cpp  mainTest4.cpp  malloc2_test01.cpp  malloc3_test01.cpp  malloc3_test02.cpp  malloc3_test03.cpp  malloc4_test01.cpp  malloc_3_tests.cpp  malloc_3_tests_realloc.cpp  malloc_test.cpp  tamuz_modified_tests_for_malloc_2.cpp  tamuz_tests_hw4_malloc2.cpp  tamuz_tests_hw4_malloc4.cpp  test_realloc.cpp  test_realloc_2.cpp  test_realloc_3.cpp
Wet4/adjusted_tests_hw4/testsV2/: mainTest3.cpp  mainTest4.cpp
Wet4/tests/: aux_macro.h  malloc_1.cpp  malloc_1_mor.cpp  malloc_2.cpp  malloc_2_mor.cpp  malloc_2_n.cpp  malloc_3.cpp  malloc_3_mor.cpp  malloc_3_n.cpp  malloc_4.cpp  malloc_4_mor.cpp  run_foreign_tests.sh  sbrk_faulty.cpp  test1  test1.cpp  test10  test10.cpp  test1001  test101  test101.cpp  test102  test102.cpp  test103  test103.cpp  test105  test105.cpp  test106  test107  test109  test11  test11.cpp  test110  test110.cpp  test111  test113  test114  test115  test117  test118  test119  (+378 more)
Wet4/tests/ref_tests/: aux_macro.h  test1001.cpp  test1001_ref  test101_ref  test102_ref  test103_ref  test106.cpp  test107.cpp  test109.cpp  test111.cpp  test113.cpp  test114.cpp  test115.cpp  test117.cpp  test118.cpp  test123.cpp  test126.cpp  test127.cpp  test130.cpp  test133.cpp  test134.cpp  test135.cpp  test14.cpp  test142.cpp  test143.cpp  test145.cpp  test150.cpp  test151.cpp  test153.cpp  test155.cpp  test157.cpp  test158.cpp  test159.cpp  test162.cpp  test163.cpp  test167.cpp  test17.cpp  test171.cpp  test174.cpp  test177.cpp  (+198 more)
